# cookiecutter-python

./: .gitignore  .gitlab-ci.yml  README.rst  cookiecutter.json  dev-requirements.txt  pytest.ini  requirements.txt  tox.ini
hooks/: post_gen_project.py
tests/: conftest.py  test_rendered.py
tests/rendered/default/expected/lorem-ipsum/: .coveragerc  .gitlab-ci.yml  LICENSE.txt  MANIFEST.in  setup.cfg  setup.py  tox.ini
tests/rendered/default/expected/lorem-ipsum/docs/: conf.py  index.rst
tests/rendered/default/expected/lorem-ipsum/src/lorem_ipsum/: __init__.py  __main__.py
tests/rendered/default/expected/lorem-ipsum/tests/test_lorem_ipsum/: test_main.py
tests/rendered/travis/: cookiecutter.yaml
tests/rendered/travis/expected/lorem-ipsum/: .coveragerc  .isort.cfg  .travis.yml  CHANGELOG.rst  README.rst  setup.cfg  tox.ini
tests/rendered/travis/expected/lorem-ipsum/docs/: conf.py  index.rst
tests/rendered/travis/expected/lorem-ipsum/src/lorem_ipsum/: __init__.py
tests/rendered/travis/expected/lorem-ipsum/tests/test_lorem_ipsum/: test_init.py
{{cookiecutter.project_name}}/: .coveragerc  .gitlab-ci.yml  .isort.cfg  .travis.yml  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.rst  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_name}}/docs/: conf.py  index.rst
{{cookiecutter.project_name}}/src/{{cookiecutter.project_package}}/: __about__.py  __init__.py  __main__.py
{{cookiecutter.project_name}}/tests/: test_init.py  test_main.py
{{cookiecutter.project_slug}}/: .coveragerc  .gitignore  .gitlab-ci.yml  .isort.cfg  .travis.yml  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_package}}/: __about__.py  __init__.py  __main__.py
{{cookiecutter.project_slug}}/tests/test_{{cookiecutter.project_package}}/: test_init.py  test_main.py
