[metadata]
name = {{ cookiecutter.project_slug }}
version = attr: {{ cookiecutter.project_package }}.__version__
url = {{ cookiecutter.project_url }}
author = {{ cookiecutter.author_name }}
author_email = {{ cookiecutter.author_email }}
classifiers =
    Intended Audience :: Developers
{%- if cookiecutter.project_license == "mit" %}
    License :: OSI Approved :: MIT License
{%- elif cookiecutter.project_license == "gpl" %}
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
{%- endif %}
{%- if cookiecutter.python_min_version == "2.7" %}
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
{%- endif %}
    Programming Language :: Python :: 3
{%- if cookiecutter.python_min_version <= "3.4" %}
    Programming Language :: Python :: 3.4
{%- endif %}
{%- if cookiecutter.python_min_version <= "3.5" %}
    Programming Language :: Python :: 3.5
{%- endif %}
{%- if cookiecutter.python_min_version <= "3.6" %}
    Programming Language :: Python :: 3.6
{%- endif %}
{%- if cookiecutter.python_min_version <= "3.7" %}
    Programming Language :: Python :: 3.7
{%- endif %}
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python
    Topic :: Software Development
{%- if cookiecutter.cli_parser != "none" %}
    Topic :: Utilities
{%- endif %}
{%- if cookiecutter.project_license == "mit" %}
license = MIT
{%- elif cookiecutter.project_license == "gpl" %}
license = GPL
{%- endif %}
{%- if cookiecutter.project_license != "none" %}
license_files = LICENSE.txt
{%- endif %}
description = {{ cookiecutter.project_description }}
long_description = file: README.rst

[options]
zip_safe = False
install_requires ={% if cookiecutter.cli_parser == "click" %}
    click{% endif %}
python_requires = >={{ cookiecutter.python_min_version }}, {% if cookiecutter.python_min_version == "2.7" %}!=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, {% endif %}{% if cookiecutter.python_min_version >= "3.5" %}!=3.4.*, {% endif %}{% if cookiecutter.python_min_version >= "3.6" %}!=3.5.*, {% endif%}{% if cookiecutter.python_min_version >= "3.7" %}!=3.6.*, {% endif %}<4
packages = find:
package_dir = = src

[options.extras_require]
dev =
{%- if cookiecutter.code_formatter == "black" %}
    black
{%- endif %}
{%- if cookiecutter.test_suite != "none" %}
    coverage
{%- endif %}
{%- if cookiecutter.linter == "flake8" %}
    flake8
{%- endif %}
    isort
{%- if cookiecutter.type_checker == "mypy" %}
    mypy
{%- endif %}
{%- if cookiecutter.test_suite == "pytest" %}
    pytest
{%- endif %}
{%- if cookiecutter.doc_generator == "sphinx" %}
    sphinx
{%- if cookiecutter.cli_parser != "none" %}
    sphinxcontrib-programoutput
{%- endif %}
    tox
{%- endif %}
{%- if cookiecutter.cli_parser != "none" %}

[options.entry_points]
console_scripts =
    {{ cookiecutter.project_prog }} = {{ cookiecutter.project_package }}.__main__:main
{%- endif %}

[options.packages.find]
where = src

[bdist_wheel]
universal = 1
