[metadata]
name = lorem-ipsum
version = attr: lorem_ipsum.__version__
url = https://github.com/johndoe/lorem-ipsum
author = John Doe
author_email = john.doe@example.tld
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python
    Topic :: Software Development
description = Lorem ipsum dolor sit amet, consectetur adipiscing elit.
long_description = file: README.rst

[options]
zip_safe = False
install_requires =
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, <4
packages = find:

[options.extras_require]
dev =
    black
    coverage
    flake8
    isort
    mypy
    pytest
    sphinx
    tox

[options.packages.find]
where = src

[bdist_wheel]
universal = 1
